# shitpost

./: .editorconfig  Cargo.toml  LICENSE  README.md  build.rs
markov/: Cargo.toml  README.md
markov/src/: builder.rs  error.rs  lib.rs  markov.rs  parse.rs  tokens.rs
src/: main.rs
