[package]
name = "shitpost_markov"
description = "Backend for training a Markov bot at compile-time."
repository = "https://github.com/KaitlynEthylia/shitpost/tree/mistress/markov"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
actson = { version = "1.0.0", features = ["tokio"] }
bytes = "1.6.0"
futures = "0.3.30"
html-escape = "0.2.13"
lazy_static = "1.4.0"
rayon = "1.10.0"
regex = "1.10.4"
reqwest = { workspace = true, features = ["stream"] }
string-interner = "0.17.0"
thiserror = "1.0.61"
tokio.workspace = true

[features]
default = ["_"]
_ = []
